--- a/index.html
+++ b/index.html
@@ -3,125 +3,132 @@
 
 <body>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css" />
-	<div class="header">
-		<h1>CoronaMatch</h1>
-		<p>Admin page</p>
-	</div>
-	<!-- Buttons to open the modals -->
-	<div class="meny">		
-		<button onclick="getClientModal()">Add Client</button>
-		<button onclick="getProviderModal()">Add Provider</button>
-	</div>
-	<!-- The Client (contains the Client form) -->
-	<div id="client" class="modal">
-		<span onclick="document.getElementById('client').style.display='none'" class="close" title="Close Client">Go Back</span>
-		<form class="modal-content" action="/action_page.php">
-			<div class="container">
-				<h1>Add Client</h1>
-				<p>Please fill in this form to create an Client.</p>
-				<hr>
-
-				<label for="clientID"><b>Client ID</b></label>
-				<input type="text" placeholder="Enter Client ID" name="clientID" required>
-
-				<label for="name"><b>Name</b></label>
-				<input type="text" placeholder="Enter Name" name="name" required>
-
-				<label for="phoneNumber"><b>Phone Number</b></label>
-				<input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
-
-				<label for="email"><b>Email</b></label>
-				<input type="text" placeholder="Enter Email" name="phoneNumber" required>
-
-				<label for="address"><b>Address</b></label>
-				<input type="text" placeholder="Enter Address" name="address" required>
-
-				<label for="city"><b>City</b></label>
-				<input type="text" placeholder="Enter City" name="city" required>
-
-				<h2>Tasks:  </h2>
-				<p>Please check the task you need help with</p>
-
-				<label>
-					<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
-				</label>
-
-				<label>
-					<input type="checkbox" name="walkPets" style="margin-bottom:15px"> Walk pets
-				</label>
-
-				<label>
-					<input type="checkbox" name="cooking" style="margin-bottom:15px"> Cooking
-				</label>
-
-				<label>
-					<input type="checkbox" name="pickupMail" style="margin-bottom:15px"> Pickup Mail
-				</label>
-
-				<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-				<div class="clearfix">
-					<button type="button" class="updatebtn">Update</button>
-					<button type="button" class="createbtn">Create</button>
-				</div>
+	<div id="page container">
+		<div id="content-wrap">
+			<header id="header">
+				<h1>CoronaMatch</h1>
+				<p>Admin page</p>
+			</header>
+			<!-- Buttons to open the modals -->
+			<div class="choiceMenu">
+				<button onclick="getClientModal()">Add / Update Client</button>
+				<button onclick="getProviderModal()">Add / Update Provider</button>
 			</div>
-		</form>
-	</div>
+			<!-- The Client (contains the Client form) -->
+			<div id="client" class="modal">
+				<span onclick="document.getElementById('client').style.display='none'" class="close" title="Close Client">Go Back</span>
+				<form class="modal-content" action="/action_page.php">
+					<div class="container">
+						<h1>Add Client</h1>
+						<p>Please fill in this form to create an Client.</p>
+						<hr>
 
-	<!-- The Provider (contains the Provider form) -->
-	<div id="provider" class="modal">
-		<span onclick="document.getElementById('provider').style.display='none'" class="close" title="Close Provider">Go Back</span>
-		<form class="modal-content" action="/action_page.php">
-			<div class="container">
-				<h1>Add Provider</h1>
-				<p>Please fill in this form to create an Provider.</p>
-				<hr>
+						<label for="clientID"><b>Client ID</b></label>
+						<input type="text" placeholder="Enter Client ID" name="clientID" required>
 
-				<label for="providerID"><b>Provider ID</b></label>
-				<input type="text" placeholder="Enter Provider ID" name="providerID" required>
+						<label for="name"><b>Name</b></label>
+						<input type="text" placeholder="Enter Name" name="name" required>
 
-				<label for="name"><b>Name</b></label>
-				<input type="text" placeholder="Enter Name" name="name" required>
+						<label for="phoneNumber"><b>Phone Number</b></label>
+						<input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
 
-				<label for="phoneNumber"><b>Phone Number</b></label>
-				<input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
+						<label for="email"><b>Email</b></label>
+						<input type="text" placeholder="Enter Email" name="phoneNumber" required>
 
-				<label for="email"><b>Email</b></label>
-				<input type="text" placeholder="Enter Email" name="phoneNumber" required>
+						<label for="address"><b>Address</b></label>
+						<input type="text" placeholder="Enter Address" name="address" required>
 
+						<label for="city"><b>City</b></label>
+						<input type="text" placeholder="Enter City" name="city" required>
 
-				<label for="city"><b>City</b></label>
-				<input type="text" placeholder="Enter City" name="city" required>
+						<h2>Tasks:  </h2>
+						<p>Please check the task you need help with</p>
 
-				<h2>Tasks:  </h2>
-				<p>Please check the task you can help out with</p>
+						<label>
+							<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
+						</label>
 
-				<label>
-					<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
-				</label>
+						<label>
+							<input type="checkbox" name="walkPets" style="margin-bottom:15px"> Walk pets
+						</label>
 
-				<label>
-					<input type="checkbox" name="walkPets" style="margin-bottom:15px"> Walk pets
-				</label>
+						<label>
+							<input type="checkbox" name="cooking" style="margin-bottom:15px"> Cooking
+						</label>
 
-				<label>
-					<input type="checkbox" name="cooking" style="margin-bottom:15px"> Cooking
-				</label>
+						<label>
+							<input type="checkbox" name="pickupMail" style="margin-bottom:15px"> Pickup Mail
+						</label>
 
-				<label>
-					<input type="checkbox" name="pickupMail" style="margin-bottom:15px"> Pickup Mail
-				</label>
+						<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
-				<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-				<div class="clearfix">
-					<button type="button" class="updatebtn">Update</button>
-					<button type="button" class="createbtn">Create</button>
-				</div>
+						<div class="clearfix">
+							<button type="button" class="updatebtn">Update</button>
+							<button type="button" class="createbtn">Create</button>
+						</div>
+					</div>
+				</form>
 			</div>
-		</form>
-	</div>
 
+			<!-- The Provider (contains the Provider form) -->
+			<div id="provider" class="modal">
+				<span onclick="document.getElementById('provider').style.display='none'" class="close" title="Close Provider">Go Back</span>
+				<form class="modal-content" action="/action_page.php">
+					<div class="container">
+						<h1>Add Provider</h1>
+						<p>Please fill in this form to create an Provider.</p>
+						<hr>
+
+						<label for="providerID"><b>Provider ID</b></label>
+						<input type="text" placeholder="Enter Provider ID" name="providerID" required>
+
+						<label for="name"><b>Name</b></label>
+						<input type="text" placeholder="Enter Name" name="name" required>
+
+						<label for="phoneNumber"><b>Phone Number</b></label>
+						<input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
+
+						<label for="email"><b>Email</b></label>
+						<input type="text" placeholder="Enter Email" name="phoneNumber" required>
+
+
+						<label for="city"><b>City</b></label>
+						<input type="text" placeholder="Enter City" name="city" required>
+
+						<h2>Tasks:  </h2>
+						<p>Please check the task you can help out with</p>
+
+						<label>
+							<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
+						</label>
+
+						<label>
+							<input type="checkbox" name="walkPets" style="margin-bottom:15px"> Walk pets
+						</label>
+
+						<label>
+							<input type="checkbox" name="cooking" style="margin-bottom:15px"> Cooking
+						</label>
+
+						<label>
+							<input type="checkbox" name="pickupMail" style="margin-bottom:15px"> Pickup Mail
+						</label>
+
+						<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+						<div class="clearfix">
+							<button type="button" class="updatebtn">Update</button>
+							<button type="button" class="createbtn">Create</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<footer id="footer">
+			<p>Written in HTML 5 with external CSS</p>
+			<p>Group 11 SYSA14</p>
+		</footer>
+	</div>
 	<script>
 		// my methods
 		function getProviderModal() {
