--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 			</header>
 			<!-- Buttons to open the modals -->
 			<div class="choiceMenu">
-				<button onclick="getClientModal()">Add / Update Client</button>
-				<button onclick="getProviderModal()">Add / Update Provider</button>
+				<button onclick="getModal('client')">Add / Update Client</button>
+				<button onclick="getModal('provider')">Add / Update Provider</button>
+				<button onclick="getModal('find')">Find</button>
+				<a href="resultPage.html" class="fakebutton">Result Page</a>
 			</div>
 			<!-- The Client (contains the Client form) -->
 			<div id="client" class="modal">
 				<span onclick="document.getElementById('client').style.display='none'" class="close" title="Close Client">Go Back</span>
-				<form class="modal-content" action="/action_page.php">
+				<form class="modal-content" action="/action_page.jsp" method="post">
 					<div class="container">
 						<h1>Add Client</h1>
 						<p>Please fill in this form to create an Client.</p>
@@ -33,7 +35,7 @@
 						<input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
 
 						<label for="email"><b>Email</b></label>
-						<input type="text" placeholder="Enter Email" name="phoneNumber" required>
+						<input type="text" placeholder="Enter Email" name="email" required>
 
 						<label for="address"><b>Address</b></label>
 						<input type="text" placeholder="Enter Address" name="address" required>
@@ -45,26 +47,26 @@
 						<p>Please check the task you need help with</p>
 
 						<label>
-							<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
+							<input type="checkbox" name="myCheckbox" style="margin-bottom:15px"> Cleaning
 						</label>
 
 						<label>
-							<input type="checkbox" name="walkPets" style="margin-bottom:15px"> Walk pets
+							<input type="checkbox" name="myCheckbox" style="margin-bottom:15px"> Walk pets
 						</label>
 
 						<label>
-							<input type="checkbox" name="cooking" style="margin-bottom:15px"> Cooking
+							<input type="checkbox" name="myCheckbox" style="margin-bottom:15px"> Cooking
 						</label>
 
 						<label>
-							<input type="checkbox" name="pickupMail" style="margin-bottom:15px"> Pickup Mail
+							<input type="checkbox" name="myCheckbox" style="margin-bottom:15px"> Pickup Mail
 						</label>
 
 						<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
 						<div class="clearfix">
-							<button type="button" class="updatebtn">Update</button>
-							<button type="button" class="createbtn">Create</button>
+							<button type="submit" class="updatebtn">Update</button>
+							<button type="submit" class="createbtn" onclick="alert("hello")">Create</button>
 						</div>
 					</div>
 				</form>
@@ -114,30 +116,64 @@
 							<input type="checkbox" name="pickupMail" style="margin-bottom:15px"> Pickup Mail
 						</label>
 
-						<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+						<p>By creating an account you agree to our <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
 						<div class="clearfix">
-							<button type="button" class="updatebtn">Update</button>
+							<a href=" https://www.youtube.com/watch?v=oHg5SJYRHA0" class="fakebutton">Rick Roll</a>
+							<button type="submit" formaction="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="updatebtn">Update</button>
 							<button type="button" class="createbtn">Create</button>
 						</div>
 					</div>
 				</form>
 			</div>
-		</div>
-		<footer id="footer">
-			<p>Written in HTML 5 with external CSS</p>
-			<p>Group 11 SYSA14</p>
-		</footer>
-	</div>
-	<script>
-		// my methods
-		function getProviderModal() {
-			document.getElementById('provider').style.display = 'block';
-		}
-		function getClientModal() {
-			document.getElementById('client').style.display = 'block';
-		}
+			<!-- The Find modal (contains the Provider form) -->
+			<div id="find" class="modal">
+				<span onclick="document.getElementById('find').style.display='none'" class="close" title="Close Provider">Go Back</span>
+				<form class="modal-content" action="/action_page.php">
+					<div class="container">
+						<label for="ID"><b>ID</b></label>
+						<input type="text" placeholder="Enter ID" name="ID" required>
+					</div>
+					<div class="clearfix">
+						<button type="button" class="findbtn">Find</button>
+					</div>
+				</form>
+			</div>
 
-	</script>
+						<!-- Bubble stuff -->
+						<div id="background-wrap">
+							<div class="bubble x1"></div>
+							<div class="bubble x2"></div>
+							<div class="bubble x3"></div>
+							<div class="bubble x4"></div>
+							<div class="bubble x5"></div>
+							<div class="bubble x6"></div>
+							<div class="bubble x7"></div>
+							<div class="bubble x8"></div>
+							<div class="bubble x9"></div>
+							<div class="bubble x10"></div>
+						</div>
+					</div>
+					<footer id="footer">
+						<p>Written in HTML 5 with external CSS</p>
+						<p>Group 11 SYSA14</p>
+					</footer>
+			</div>
+			<script>
+				// my methods
+				//function getProviderModal() {
+				//	document.getElementById('provider').style.display = 'block';
+				//}
+				//function getClientModal() {
+				//	document.getElementById('client').style.display = 'block';
+				//}
+				//function getFindModal() {
+				//	document.getElementById('find').style.display = 'block';
+				//}
+				function getModal(value) {
+					document.getElementById(value).style.display = 'block';
+				}
+
+			</script>
 </body>
 </html>
