added link to interview

--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects"
-              >Projects</a
-            >
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
         </ul>
       </div>
@@ -140,6 +138,11 @@
                 feedback and analysis using a survey, Daily staffing; interface
                 for data on employee absence. Mostly within the Office 365 Suite
               </p>
+              <a
+                href="https://malmo.se/Jobb/For-dig-som-ar-student/Malmo-stads-studentmedarbetarprogram/Tidigare-studentmedarbetare-berattar/Martin-har-lart-ut-smartare-satt-att-hantera-administrativa-uppgifter.html"
+                target="_blank"
+                >Read more here</a
+              >
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">October 2021 - Present</span>
@@ -284,34 +287,40 @@
         </div>
       </section>
       <hr class="m-0" />
-       <!-- Side Projects-->
-       <section class="resume-section" id="projects">
+      <!-- Side Projects-->
+      <section class="resume-section" id="projects">
         <div class="resume-section-content">
           <h2 class="mb-5">Projects</h2>
           <div class="flex-grow-1">
             <h3 class="mb-0">LendBox</h3>
             <div class="subheading mb-3">React.js</div>
             <p>
-              Me and two coursemates started this project with the idea to help a friend offer free loans of a selection of board games.
+              Me and two coursemates started this project with the idea to help
+              a friend offer free loans of a selection of board games.
             </p>
             <p>
-                See the project <a href="https://johanahsberg.github.io/LendBoxPublic/"
-                  >Hosted on GitHub Pages</a
-                >
+              See the project
+              <a href="https://johanahsberg.github.io/LendBoxPublic/"
+                >Hosted on GitHub Pages</a
+              >
             </p>
           </div>
 
           <div class="flex-grow-1">
             <h3 class="mb-0">GJProduktion.se</h3>
-            <div class="subheading mb-3">From Bootstrap to React.js with material-kit-react</div>
+            <div class="subheading mb-3">
+              From Bootstrap to React.js with material-kit-react
+            </div>
             <p class="mb-0">
-              Ongoing project trying to convert <a href="https://gjproduktion.se/hem"
-              target="_blank">my dads homepage</a
-            > to this <a href="https://johanssonrobert.se/"
-            target="_blank">newer site</a
-          >
+              Ongoing project trying to convert
+              <a href="https://gjproduktion.se/hem" target="_blank"
+                >my dads homepage</a
+              >
+              to this
+              <a href="https://johanssonrobert.se/" target="_blank"
+                >newer site</a
+              >
             </p>
-            
           </div>
         </div>
       </section>
